# sigspatial-giscup-tu-dortmund-2025

./: .env  .gitignore  0_convert_dataset.py  2_eval_benchmarks.py  3_predictor.py  4_heatmap_per_user.py  5_heatmap_per_day.py  6_convert_chunked.py  7_predictor_chunked.py  README.md  baseline_methods.py  basic_benchmarks_v0.py  calc.md  config.py  early_stopping_stats.txt  eval_baseline.py  gaussian_test.py  geobleu_optimized.py  geobleu_seq_eval.py  geobleu_validator_example.py  ideas.md  main.py  notes.md  observe.py  pyproject.toml  relative_movement_predictions_info.txt  relative_sim_predictor.py  test_1607.py  test_3007.py  top-1.py  transpose.py  transpose_v2.py  utils.py  v3.py  v4.py  v5.py  v5_2.py  v6.py  vis.py  vis2.py
bachelorarbeit/: bachelorarbeit-expose.md  expose.tex
