[tool.poetry]
name = "sigspatial-giscup-tu-dortmund-2025"
version = "0.1.0"
description = ""
authors = ["fortisai <0xfortisai@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
matplotlib = "*"
seaborn = "*"
scipy = "*"
pydantic = "*"
pydantic-settings = "*"
pyarrow = "*"
fastparquet = "*"
numpy = "*"
tqdm = "*"
scikit-learn = "*"
fastdtw = "^0.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
